k8s/mysql/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-wordpress
  namespace: mysql
  labels:
    database: ""
    type: mysql
    db: mysql-wp
spec:
  selector:
    matchLabels:
      db: mysql-wp
  serviceName: mysql-wordpress
  replicas: 1
  template:
    metadata:
      labels:
        database: ""
        type: mysql
        db: mysql-wp
    spec:
      containers:
      - name: main
        image: mysql:8.0-debian
        livenessProbe:
          exec:
            command: 
              - bash
              - -c
              - |
                mysqladmin -u$MYSQL_ROOT_USERNAME -p$MYSQL_ROOT_PASSWORD ping
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command: 
              - bash
              - -c
              - |
                mysql -u$MYSQL_ROOT_USERNAME -p$MYSQL_ROOT_PASSWORD -e 'SELECT 1'
          initialDelaySeconds: 5
          periodSeconds: 2
          timeoutSeconds: 1
        ports:
          - containerPort: 3306
            name: mysql
        volumeMounts:
          - name: data
            mountPath: /var/lib/mysql
          - name: config
            mountPath: /etc/mysql/conf.d/mysql.cnf
            subPath: mysql.cnf
      volumes:
        - name: config
          configMap:
            name: mysql-wordpress
            items:
              - key: mysql.cnf
                path: mysql.cnf
        - name: data
          persistentVolumeClaim:
            claimName: mysql-wordpress
