k8s/mysql/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql-wordpress
  namespace: mysql
spec:
  podSelector:
    matchLabels:
      db: mysql-wp
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              project: alcanzapoesia
      ports:
        - protocol: TCP
          port: 3306
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              project: alcanzapoesia
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 8080
